// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/common/Link > should render correctly 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

<div>
  <a
    class="c0"
    href="/test"
  >
    CONTENT
  </a>
</div>
`;

exports[`components/common/Link > should render props 1`] = `
.c0 {
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #22c;
}

.c0:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c0:focus {
  outline: 1px dotted #22c;
  outline-offset: -1px;
}

<div>
  <a
    class="c0"
    href="/test"
    target="_blank"
  />
</div>
`;
